<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="LoginTitle">Fitness Tracker</string>
    <string name="LoginUsername">Username</string>
    <string name="LoginPassword">Password</string>
    <string name="LoginConnectionSwitch">Offline</string>
    <string name="LoginButton">Log in</string>
    <string name="ButtonForgotUsername">Forgot Username</string>
    <string name="ButtonForgotPassword">Forgot Password</string>
    <string name="ButtonNewUser">Create New User</string>
    <string name="CloudPNG">Cloud PNG</string>
    <string name="SunPNG">Sun PNG</string>
    <string name="swt_login_offline">Offline User</string>
    <string name="swt_login_online">Online User</string>
    <string name="tv_newUser_title">Create New User</string>
    <string name="et_newUser_username">Username</string>
    <string name="et_newUser_password">Password</string>
    <string name="et_newUser_passwordMatch">Re-enter Password</string>
    <string name="et_newUser_email">Email Address</string>
    <string name="et_newUser_phoneNumber">Phone Number</string>
    <string name="btn_newUser_create">Create</string>
    <string name="swt_newUser_offline">Offline User</string>
    <string name="swt_newUser_online">Online User</string>
    <string name="tv_userProfile_title">User Name</string>
    <string name="tv_userProfile_gender">Gender:</string>
    <string name="btn_userProfile_weight">Weight</string>
    <string name="btn_userProfile_exercise">Exercise</string>
    <string name="btn_userProfile_journal">Journal</string>
    <string name="btn_userProfile_diet">Diet</string>
    <string name="rb_userProfile_male">Male</string>
    <string name="rb_userProfile_female">Female</string>
    <string name="tv_userProfile_age">Age: </string>
    <string name="tv_userProfile_height">Height: </string>
    <string name="rb_userProfile_gainMuscle">Gain Muscle</string>
    <string name="rb_userProfile_loseWeight">Lose Weight</string>
    <string name="rb_userProfile_maintain">Maintain</string>
    <string name="tv_userProfile_exerciseType">Fitness Plan:</string>
    <string name="btn_userProfile_edit">Edit</string>
    <string name="tv_userProfile_genderData">""</string>
    <string name="tv_userProfile_ageData">""</string>
    <string name="tv_userProfile_heightData">""</string>
    <string name="tv_userProfile_fitnessPlanData">""</string>
    <string name="tv_journal_title">Journal:</string>
    <string name="et_journal_entry">Add a Journal Entry</string>
    <string name="btn_journal_submit">Submit</string>
    <string name="tv_journal_list_date">Date</string>
    <string name="tv_journal_list_note">Note</string>
    <string name="tv_journal_emptyJournal">Journal is empty</string>
    <string name="btn_journal_view_journal">View Journal Entry</string>
    <string name="tv_weight_title">Weights</string>
    <string name="et_weight_editCurrentWeight">Current Weight</string>
    <string name="btn_weight_changeWeight">Enter</string>
    <string name="btn_weight_back">Back</string>
    <string name="tv_weight_date_title">Date</string>
    <string name="tv_weight_weight_title">Weight</string>
    <string name="tv_weight_recommendation">Recommendation</string>
    <string name="tv_weightList_date">Date</string>
    <string name="tv_weightList_weight">Weight</string>
    <string name="tv_exercise_title">Exercise</string>
    <string name="tv_exercise_date_title">Date</string>
    <string name="tv_exercise_exercise_title">Exercise</string>
    <string name="tv_exercise_time_title">Time(minutes)</string>
    <string name="tv_exercise_exercise_type">Exercise Type:</string>
    <string name="rb_exercise_cardio">Cardio</string>
    <string name="rb_exercise_strength">Strength</string>
    <string name="et_exercise_time">Time(minutes)</string>
    <string name="btn_exercise_back">Back</string>
    <string name="btn_exercise_enter">Enter</string>
    <string name="tv_exercise_recommendation">Recommendation</string>
    <string-array name="spn_exercises">
        <item></item>
        <item>Running</item>
        <item>Cycling</item>
        <item>Swimming</item>
        <item>Weight Lifting</item>
        <item>Walking</item>
    </string-array>
    <string name="tv_exerciseList_date">Date</string>
    <string name="tv_exerciseList_exerciseType">Exercise</string>
    <string name="tv_exerciseList_exerciseTime">Time Exercised</string>
    <string name="tv_diet_title">Diet</string>
    <string name="et_diet_calories">Calories</string>
    <string name="btn_diet_add">Add</string>
    <string name="btn_diet_remove">Remove</string>
    <string name="btn_diet_back">Back</string>
    <string name="tv_diet_date_title">Date</string>
    <string name="tv_diet_calories_title">Calories</string>
    <string name="et_diet_protein">Protein</string>
    <string name="tv_diet_proteinColumn">Protein</string>
    <string name="tv_diet_carbColumn">Carb</string>
    <string name="tv_diet_fatColumn">Fat</string>
    <string name="et_diet_carb">Carb</string>
    <string name="et_diet_fat">Fat</string>
    <string name="tv_diet_userRecommendation">Recommendation</string>
    <string name="et_diet_food">Food</string>
    <string name="et_diet_foodName">Enter a food from the catalog:</string>
    <string name="btn_diet_catalog">Food Catalog</string>
    <string name="tv_dietList_date">Date</string>
    <string name="tv_dietList_calories">Calories</string>
    <string name="tv_dietList_protein">Protein</string>
    <string name="tv_dietList_carb">Carb</string>
    <string name="tv_dietList_fat">Fat</string>
    <string name="tv_food_title">Title</string>
    <string name="tv_food_name">Food</string>
    <string name="tv_food_calories">Calories</string>
    <string name="tv_food_protein">Protein</string>
    <string name="tv_food_carbs">Carbs</string>
    <string name="tv_food_fat">Fat</string>
    <string name="tv_foodList_name">Food</string>
    <string name="tv_foodList_calories">Calories</string>
    <string name="tv_foodList_protein">Protein</string>
    <string name="tv_foodList_carb">Carbs</string>
    <string name="tv_foodList_fat">Fat</string>
    <string name="tv_foodCatalog_title">Food Catalog</string>
    <string name="btn_foodCatalog_add">Add To Catalog</string>
    <string name="title_activity_food_recycler">FoodRecyclerActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sw_login_onlineMode">Online Mode</string>
</resources>