<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="212dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/LoginPassword"
        android:autofillHints="@string/LoginPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_username" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="212dp"
        android:layout_height="40dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/LoginUsername"
        android:autofillHints="@string/LoginUsername"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_loginTitle" />

    <Button
        android:id="@+id/btn_forgotUsername"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="45dp"
        android:text="@string/ButtonForgotUsername"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <Button
        android:id="@+id/btn_forgotPassword"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="45dp"
        android:text="@string/ButtonForgotPassword"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/btn_forgotUsername"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <TextView
        android:id="@+id/tv_loginTitle"
        android:layout_width="258dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:text="@string/LoginTitle"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_newUser"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/ButtonNewUser"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="212dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:text="@string/LoginButton"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <Switch
        android:id="@+id/sw_login_onlineMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sw_login_onlineMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_newUser" />
</androidx.constraintlayout.widget.ConstraintLayout>