<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/user_profile_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fitness_app.activities.UserProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_userProfile_title"
        android:text="@string/tv_userProfile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_userProfile_gender"
        android:background="@null"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_bias=".1"/>


    <TextView
        android:id="@+id/tv_userProfile_gender"
        android:text="@string/tv_userProfile_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_userProfile_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_userProfile_age"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:textSize="20sp"
        android:background="@null"/>

    <RadioGroup
        android:id="@+id/rg_userProfile_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/tv_userProfile_gender"
        app:layout_constraintLeft_toRightOf="@+id/tv_userProfile_gender"
        app:layout_constraintBottom_toBottomOf="@+id/tv_userProfile_gender"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        android:background="@null">

        <RadioButton
            android:id="@+id/rb_userProfile_male"
            android:text="@string/rb_userProfile_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/rb_userProfile_female"
            android:text="@string/rb_userProfile_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_userProfile_genderData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/rg_userProfile_gender"
        app:layout_constraintLeft_toLeftOf="@+id/rg_userProfile_gender"
        app:layout_constraintBottom_toBottomOf="@+id/rg_userProfile_gender"
        android:background="@null"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_userProfile_age"
        android:text="@string/tv_userProfile_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_userProfile_gender"
        app:layout_constraintRight_toRightOf="@+id/tv_userProfile_gender"
        app:layout_constraintBottom_toTopOf="@+id/tv_userProfile_height"
        android:textSize="20sp"
        android:background="@null"/>

    <SeekBar
        android:id="@+id/sb_userProfile_age"
        android:layout_width="150dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="@+id/tv_userProfile_age"
        app:layout_constraintLeft_toLeftOf="@+id/rg_userProfile_gender"
        app:layout_constraintBottom_toBottomOf="@+id/tv_userProfile_age" />

    <TextView
        android:id="@+id/tv_userProfile_ageData"
        android:text="@string/tv_userProfile_ageData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/sb_userProfile_age"
        app:layout_constraintLeft_toLeftOf="@+id/sb_userProfile_age"
        app:layout_constraintBottom_toBottomOf="@+id/sb_userProfile_age"
        android:background="@null"
        android:textSize="20sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_userProfile_height"
        android:text="@string/tv_userProfile_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_userProfile_age"
        app:layout_constraintRight_toRightOf="@+id/tv_userProfile_gender"
        app:layout_constraintBottom_toTopOf="@+id/ll_userProfile_fitnessPlan"
        android:background="@null"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/sb_userProfile_height"
        android:layout_width="150dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="@+id/tv_userProfile_height"
        app:layout_constraintLeft_toLeftOf="@+id/rg_userProfile_gender"
        app:layout_constraintBottom_toBottomOf="@+id/tv_userProfile_height"/>

    <TextView
        android:id="@+id/tv_userProfile_heightData"
        android:text="@string/tv_userProfile_heightData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/sb_userProfile_height"
        app:layout_constraintLeft_toLeftOf="@+id/sb_userProfile_height"
        app:layout_constraintBottom_toBottomOf="@+id/sb_userProfile_height"
        android:background="@null"
        android:textSize="20sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/ll_userProfile_fitnessPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_userProfile_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_userProfile_edit"
        android:background="@null"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_userProfile_exerciseType"
            android:text="@string/tv_userProfile_exerciseType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/rg_userProfile_fitnessPlan"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_userProfile_fitnessPlanData"
            android:text="@string/tv_userProfile_fitnessPlanData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/rg_userProfile_fitnessPlan"
            app:layout_constraintBottom_toBottomOf="@+id/rg_userProfile_fitnessPlan"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:textSize="20sp"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/rg_userProfile_fitnessPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_userProfile_exerciseType"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@null"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_userProfile_loseWeight"
                android:text="@string/rb_userProfile_loseWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:text="@string/rb_userProfile_gainMuscle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:text="@string/rb_userProfile_maintain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btn_userProfile_edit"
        android:text="@string/btn_userProfile_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_userProfile_fitnessPlan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_userProfile_weight"
        style="?android:attr/borderlessButtonStyle"/>


    <Button
        android:id="@+id/btn_userProfile_weight"
        android:text="@string/btn_userProfile_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_userProfile_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_userProfile_journal"
        app:layout_constraintBottom_toTopOf="@+id/btn_userProfile_exercise"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/btn_userProfile_journal"
        android:text="@string/btn_userProfile_journal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/btn_userProfile_weight"
        app:layout_constraintLeft_toRightOf="@+id/btn_userProfile_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_userProfile_weight"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/btn_userProfile_exercise"
        android:text="@string/btn_userProfile_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_userProfile_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_userProfile_diet"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/btn_userProfile_diet"
        android:text="@string/btn_userProfile_diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/btn_userProfile_exercise"
        app:layout_constraintLeft_toRightOf="@+id/btn_userProfile_exercise"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_userProfile_exercise"
        style="?android:attr/borderlessButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>